chore: update openapi and stuff
