# utilities/request_types.py
@@ -9,12 +9,6 @@ class PercentageRequest(BaseModel):
 class SolidRequest(BaseModel):
     hex_code: str
 
-
-class FlashRequest(BaseModel):
-    direction: int
-    number_of_flashes: int = 1
-
-
 class PulseRequest(BaseModel):
     colours: list[str]
     pause_time_seconds: float = 1
